@@ -3,6 +3,7 @@
 Groupe composé de MOY Kélian, THUILLIER Killian, CHRISTIEN Adrien, HOYAU Christophe
 
 ## Créer un .jar
+### Créer le jar
 exporter la variable d'environnement de javafx
 ```sh
 export JAVAFX_HOME=/path/to/your/javafx/home
@@ -12,6 +13,11 @@ clean build gradle puis créé le jar, le lance (pour tester) puis le déplace e
 ```sh
 ./gradlew clean build && ./gradlew shadowjar && java --module-path ${JAVAFX_HOME}/lib --add-modules=javafx.base,javafx.controls,javafx.fxml -jar build/libs/my-application-1.0.0.jar && cp build/libs/my-application-1.0.0.jar dist/App.jar
 
+```
+
+### lancer le dernier `.jar` créé
+```sh
+./gradlew clean build && ./gradlew shadowjar && java --module-path ${JAVAFX_HOME}/lib --add-modules=javafx.base,javafx.controls,javafx.fxml -jar App.jar
 ```
 
 ## Planning
@@ -28,3 +34,7 @@ Fixer les bugs de la veille et avoir une archive JAR exécutable.
 
 Livrable prévu: page d'acceuil, création des objets bien et service ainsi que leur gestion, page Profil.
 
+### Pour Mercredi 10/01
+
+
+Livrable prévu : accueil + profil + css + chat
